# portfolio-backend

./: .gitignore  alembic.ini  local.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  main.py  setup_db.py
app/db_models/: skill.py  todo.py  users.py
app/routes/: authentication.py  home.py  skills.py  todo.py
app/services/: user_services.py
app/utils/: auth.py
compose/api/: Dockerfile
